// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Bottom sheet renders a custom bottom action sheet for ios (Basic modal) with custom style 1`] = `null`;

exports[`Bottom sheet renders a custom modal 1`] = `null`;

exports[`Bottom sheet renders a expanding 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  >
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Header
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Content
      </Text>
    </View>
  </View>
</View>
`;

exports[`Bottom sheet renders a expanding fullscreen 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  >
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Header
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Content
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Full screen content
      </Text>
    </View>
  </View>
</View>
`;

exports[`Bottom sheet renders a expanding fullscreen with custom styles 1`] = `
<View
  pointerEvents="box-none"
  style={
    {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      {
        "bottom": 0,
        "left": 0,
        "opacity": 0,
        "pointerEvents": "none",
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  >
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Header
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Content
      </Text>
    </View>
    <View
      onLayout={[Function]}
      pointerEvents="box-none"
    >
      <Text>
        Full screen content
      </Text>
    </View>
  </View>
</View>
`;

exports[`Bottom sheet renders a native bottom action sheet for ios (Basic modal) 1`] = `null`;

exports[`Bottom sheet renders basic modal with supportedOrientations when open 1`] = `
<Modal
  animationType="none"
  onRequestClose={[Function]}
  onShow={[Function]}
  supportedOrientations={
    [
      "portrait",
      "portrait-upside-down",
      "landscape-left",
      "landscape-right",
    ]
  }
  transparent={true}
  visible={true}
/>
`;

exports[`Bottom sheet renders custom modal with supportedOrientations when open 1`] = `
<Modal
  animationType="none"
  onRequestClose={[Function]}
  onShow={[Function]}
  supportedOrientations={
    [
      "portrait",
      "portrait-upside-down",
      "landscape-left",
      "landscape-right",
    ]
  }
  transparent={true}
  visible={true}
/>
`;
